--- a/drivers/video/logo/Kconfig
+++ b/drivers/video/logo/Kconfig
@@ -82,4 +82,9 @@ config LOGO_M32R_CLUT224
 	depends on M32R
 	default y
 
+config LOGO_RAUMFELD_CLUT224
+	bool "224-color Raumfeld boot logo"
+	depends on ARM
+	default y
+
 endif # LOGO
