--- a/sound/arm/Kconfig
+++ b/sound/arm/Kconfig
@@ -24,6 +24,7 @@ config SND_PXA2XX_PCM
 config SND_PXA2XX_LIB
 	tristate
 	select SND_AC97_CODEC if SND_PXA2XX_LIB_AC97
+	select SND_DMAENGINE_PCM
 
 config SND_PXA2XX_LIB_AC97
 	bool
