ARM: pxa: dts: add dma properties to mmc node
Signed-off-by: Daniel Mack <zonque@gmail.com>

--- a/arch/arm/boot/dts/pxa2xx.dtsi
+++ b/arch/arm/boot/dts/pxa2xx.dtsi
@@ -131,6 +131,9 @@
 			compatible = "mrvl,pxa-mmc";
 			reg = <0x41100000 0x1000>;
 			interrupts = <23>;
+			dmas = <&dma 21
+				&dma 22>;
+			dma-names = "rx", "tx";
 			status = "disabled";
 		};
 
