ARM: pxa3xx: dts: add dma properties to nand node
Signed-off-by: Daniel Mack <zonque@gmail.com>

--- a/arch/arm/boot/dts/pxa3xx.dtsi
+++ b/arch/arm/boot/dts/pxa3xx.dtsi
@@ -20,7 +20,10 @@
 			reg = <0x43100000 90>;
 			interrupts = <45>;
 			#address-cells = <1>;
-			#size-cells = <1>;	
+			#size-cells = <1>;
+			dmas = <&dma 97
+				&dma 99>;
+			dma-names = "data", "cmd";
 			status = "disabled";
 		};
 
