ARM: pxa: dts: add dma controller
Add this node to pxa2xx, which is the base for all other pxa* dts files.
Override the dma-channels property from pxa3xx, as the 3xx series has 32
channels. Other implementation might do the same when appropriate.

Signed-off-by: Daniel Mack <zonque@gmail.com>

--- a/arch/arm/boot/dts/pxa2xx.dtsi
+++ b/arch/arm/boot/dts/pxa2xx.dtsi
@@ -75,6 +75,14 @@
 			};
 		};
 
+		dma: dma-controller@40000000 {
+			compatible = "marvell,pdma-1.0";
+			reg = <0x40000000 0x10000>;
+			interrupts = <25>;
+			#dma-cells = <1>;
+			dma-channels = <16>;
+		};
+
 		ffuart: uart@40100000 {
 			compatible = "mrvl,pxa-uart";
 			reg = <0x40100000 0x30>;
