--- a/sound/soc/fsl/Kconfig
+++ b/sound/soc/fsl/Kconfig
@@ -392,6 +392,16 @@ config SND_SOC_IMX_HDMI
 	  Say Y if you want to add support for SoC audio on an i.MX board with
 	  IMX HDMI.
 
+config SND_SOC_IMX_S810
+	tristate "SoC Audio support for i.MX based board from Stream Unlimited"
+	select SND_SOC_IMX_PCM_DMA
+	select SND_SOC_FSL_SAI
+	select SND_SOC_FSL_UTILS
+	help
+	  SoC Audio support for Stream Unlimited S810 i.MX7 based boards.
+	  Say Y if you want to add support for SoC audio on S810 i.MX based
+	  board from Stream Unlimited.
+
 endif # SND_IMX_SOC
 
 endmenu
