--- a/arch/arm/boot/dts/imx7d.dtsi
+++ b/arch/arm/boot/dts/imx7d.dtsi
@@ -52,11 +52,20 @@
 			device_type = "cpu";
 			reg = <0>;
 			operating-points = <
-				/* KHz	uV */
-				/* 1200000	1225000 */
 				996000	1075000
 				792000	975000
 			>;
+
+			/*
+			 * These are additional operating points which will be merged into the `normal` operating
+			 * points by the U-Boot when the `enable_additional_operating_points` variable is set in the
+			 * const partition.
+			 */
+			additional-operating-points = <
+				/* KHz	uV */
+				1200000	1225000
+			>;
+
 			clock-latency = <61036>; /* two CLK32 periods */
 			clocks = <&clks IMX7D_ARM_A7_ROOT_CLK>, <&clks IMX7D_ARM_A7_ROOT_SRC>,
 				 <&clks IMX7D_PLL_ARM_MAIN_CLK>, <&clks IMX7D_PLL_SYS_MAIN_CLK>;
