cp: S810DTS: Add comments with line names for audio pins
Signed-off-by: Radek Dostál <radek.dostal@streamunlimited.com>

--- a/arch/arm/boot/dts/imx7d-sue-s810-basic-0.dtsi
+++ b/arch/arm/boot/dts/imx7d-sue-s810-basic-0.dtsi
@@ -254,10 +254,10 @@
 
 		pinctrl_sai1: sai1grp {
 			fsl,pins = <
-				MX7D_PAD_ENET1_RX_CLK__SAI1_TX_BCLK	0x13
-				MX7D_PAD_SAI1_TX_SYNC__SAI1_TX_SYNC	0x13
-				MX7D_PAD_ENET1_COL__SAI1_TX_DATA0	0x13
-				MX7D_PAD_SAI1_RX_DATA__SAI1_RX_DATA0	0x13
+				MX7D_PAD_ENET1_RX_CLK__SAI1_TX_BCLK	0x13	/* I2S_BCLK_OUT1_3 */
+				MX7D_PAD_SAI1_TX_SYNC__SAI1_TX_SYNC	0x13	/* I2S_WCLK_OUT1_3 */
+				MX7D_PAD_ENET1_COL__SAI1_TX_DATA0	0x13	/* I2S_DATA_OUT1 */
+				MX7D_PAD_SAI1_RX_DATA__SAI1_RX_DATA0	0x13	/* I2S_DATA_IN1 */
 			>;
 		};
 
@@ -298,7 +298,7 @@
 
 		pinctrl_sai1_mclk: sai1grp_mclk {
 			fsl,pins = <
-				MX7D_PAD_GPIO1_IO01__SAI1_MCLK	0x14
+				MX7D_PAD_GPIO1_IO01__SAI1_MCLK	0x14	/* I2S_MCLK_INOUT */
 			>;
 		};
 
