S810DTS: Add missing pinmux configurations
TODO: there are still a couple of pins missing which belongs to SAI1, but
      are present only on extended interface.

Signed-off-by: Radek Dostál <radek.dostal@streamunlimited.com>

--- a/arch/arm/boot/dts/imx7d-sue-s810-basic-0.dtsi
+++ b/arch/arm/boot/dts/imx7d-sue-s810-basic-0.dtsi
@@ -258,6 +258,7 @@
 				MX7D_PAD_SAI1_TX_SYNC__SAI1_TX_SYNC	0x13	/* I2S_WCLK_OUT1_3 */
 				MX7D_PAD_ENET1_COL__SAI1_TX_DATA0	0x13	/* I2S_DATA_OUT1 */
 				MX7D_PAD_SAI1_RX_DATA__SAI1_RX_DATA0	0x13	/* I2S_DATA_IN1 */
+				MX7D_PAD_SD1_DATA3__SAI3_TX_DATA0	0x13	/* I2S_DATA_OUT3 */
 			>;
 		};
 
