--- a/arch/arm/boot/dts/imx7d-sue-streamkitprime-0.dtsi
+++ b/arch/arm/boot/dts/imx7d-sue-streamkitprime-0.dtsi
@@ -240,6 +240,8 @@
 				MX7D_PAD_SAI2_TX_BCLK__SAI2_TX_BCLK	0x11	/* I2S_BCLK_OUT2 */
 				MX7D_PAD_SAI2_TX_SYNC__SAI2_TX_SYNC	0x11	/* I2S_WCLK_OUT2 */
 				MX7D_PAD_SAI2_TX_DATA__SAI2_TX_DATA0	0x11	/* I2S_DATA_OUT2 */
+				MX7D_PAD_SAI1_RX_BCLK__SAI2_RX_BCLK	0x11	/* I2S_BCLK_IN2 */
+				MX7D_PAD_SD2_CLK__SAI2_RX_SYNC		0x11	/* I2S_WCLK_IN2 */
 				MX7D_PAD_SAI2_RX_DATA__SAI2_RX_DATA0	0x11	/* I2S_DATA_IN2 */
 			>;
 		};
