S810DTS: Add pinmux configuration for voice board PDOWN_N pin
This pin powers down the voice board in a way, that only microphones
will be active. It will be controled from userspace.

TODO: after we introduce proper device tree for prime's daughter boards
      (voice, dsd, empty, ...) this pin should move just to the voice
      board device tree

Signed-off-by: Radek Dostál <radek.dostal@streamunlimited.com>

--- a/arch/arm/boot/dts/imx7d-sue-streamkitprime-0.dtsi
+++ b/arch/arm/boot/dts/imx7d-sue-streamkitprime-0.dtsi
@@ -11,6 +11,9 @@
 	compatible = "sue,stream810-demo", "sue,stream810", "fsl,imx7d";
 
 	audio {
+		pinctrl-names = "default";
+		pinctrl-0 = <&pinctrl_audio>;
+
 		compatible = "sue,am33xx-generic-audio";
 		sue,card-name = "Stream Audio on imx7";
 
@@ -152,6 +155,12 @@
 	pinctrl-0 = <&pinctrl_hostlink>;
 
 	imx7d-sue-streamkitprime {
+		pinctrl_audio: audiogrp {
+			fsl,pins = <
+				MX7D_PAD_GPIO1_IO08__GPIO1_IO8		0x00    /* PDOWN_N */
+			>;
+		};
+
 		pinctrl_uart3: uart3grp {
 			fsl,pins = <
 				MX7D_PAD_UART3_TX_DATA__UART3_DCE_TX	0x79
