ASoC: sue: stream-s8xx: add TDM support
change spdif to tdm as imx7 can not generate spdif

TODO: extend fsl_sai to avoid a need to capture always all 8 channels and
      bring them to userspace.

Signed-off-by: Radek Dostál <radek.dostal@streamunlimited.com>

--- a/arch/arm/boot/dts/imx7d-sue-streamkitprime-0.dtsi
+++ b/arch/arm/boot/dts/imx7d-sue-streamkitprime-0.dtsi
@@ -48,6 +48,8 @@
 				sue,cpu-dai-name = "308b0000.sai";
 				sue,codec = <&pcm_dummy2>;
 				sue,codec-dai-name = "Dummy PCM Codec";
+
+				sue,tdm;
 			};
 		};
 	};
