S810DTS: add NAND timings for s810
These timings were tested and improve read and write speeds significantly.

NOTE: we are adding the same timing node in the device-tree for the s810
and s810-basic, this is ugly and needs to be cleaned up when we clean up
the device-trees.

Signed-off-by: Martin Pietryka <martin.pietryka@streamunlimited.com>

--- a/arch/arm/boot/dts/imx7d-sue-s810-0.dtsi
+++ b/arch/arm/boot/dts/imx7d-sue-s810-0.dtsi
@@ -134,6 +134,16 @@
 	pinctrl-0 = <&pinctrl_gpmi_nand_1>;
 	status = "okay";
 	nand-on-flash-bbt;
+
+	timings {
+		data-setup-ns = <12>;
+		data-hold-ns = <11>;
+		address-setup-ns = <20>;
+		sample-delay-ns = <0>;
+		trea-ns = <20>;
+		trloh-ns = <5>;
+		trhoh-ns = <25>;
+	};
 };
 
 &i2c2 {
