S810DTS: fixup amp mute on democlient
Technically the SAI3_TX_DATA0 pin belongs in this section, but on the
democlient with the adapter board we used this pin for the amp mute instead
so we can not have it here for now. Thus we comment the line out and
add a comment which explains the situation.

Signed-off-by: Martin Pietryka <martin.pietryka@streamunlimited.com>

--- a/arch/arm/boot/dts/imx7d-sue-s810-0.dtsi
+++ b/arch/arm/boot/dts/imx7d-sue-s810-0.dtsi
@@ -270,7 +270,15 @@
 				MX7D_PAD_SAI1_TX_SYNC__SAI1_TX_SYNC	0x13	/* I2S_WCLK_OUT1_3 */
 				MX7D_PAD_ENET1_COL__SAI1_TX_DATA0	0x13	/* I2S_DATA_OUT1 */
 				MX7D_PAD_SAI1_RX_DATA__SAI1_RX_DATA0	0x13	/* I2S_DATA_IN1 */
-				MX7D_PAD_SD1_DATA3__SAI3_TX_DATA0	0x13	/* I2S_DATA_OUT3 */
+
+				/*
+				 * I2S_DATA_OUT3
+				 * NOTE: This pin is used as the amp mute on the democlient
+				 * with the adapter board, thus we need it to comment it
+				 * out for now, otherwise we break the audio on the
+				 * democlient.
+				 */
+				/* MX7D_PAD_SD1_DATA3__SAI3_TX_DATA0	0x13 */
 			>;
 		};
 
